--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "chmod +x ./node_modules/.bin/vite && npx vite build",
     "preview": "vite preview"
   },
+
   "dependencies": {
     "@heroicons/react": "^2.1.0",
     "axios": "^1.7.3",
@@ -17,7 +18,7 @@
     "react-force-graph-2d": "^1.29.0",
     "react-router-dom": "^6.22.0",
     "three": "^0.181.1",
-    "vite": "^5.3.1"
+    "vite": "^5.4.21"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.17",
