--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=4EmF9rhdzlCi5HREq5vjR+v5lVdjWC+UZU6n+pZCYFs=
+DB_PASS=Sdp*2017
 DB_NAME=entregas
 DB_PORT=3306
